[metadata]
name = here_oauth
version = 0.0.1
author = Sophia Parafina
author_email = sophia.parafina@gmail.com
description = oauth for HERE Technologies API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spara/here_oauth
project_urls =
    Bug Tracker = https://github.com/spara/here_oauth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src